# cognition

./: .env.example  .gitignore  CLAUDE.md  CLIENT_SCENARIO.md  EXTENSIONS_PLAN.md  INSTRUCTIONS.md  PLAN.md  README.md  RESEARCH.md  SPEC.md  pyproject.toml  requirements.txt  service_overrides.json
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx  theme-script.tsx
dashboard/components/: data-source-badge.tsx  findings-table.tsx  health-badge.tsx  overview-cards.tsx  pr-queue.tsx  roi-card.tsx  run-selector.tsx  sessions-table.tsx  sidebar.tsx  status-badge.tsx  trace-timeline.tsx  upload-modal.tsx
dashboard/lib/: file-lock.ts  fonts.ts  theme.tsx  types.ts  use-status.ts
mock/: mock_devin_client.py
orchestrator/: config.py  main.py  models.py  preflight.py  utils.py
orchestrator/devin/: client.py  idempotency.py  session_manager.py
orchestrator/ingest/: normalizer.py  parser.py  prioritizer.py
orchestrator/memory/: __init__.py  extractor.py  graph.json  models.py  retriever.py  store.py
playbooks/: access_logging.devin.md  dependency_vulnerability.devin.md  hardcoded_secrets.devin.md  missing_encryption.devin.md  pii_logging.devin.md  sql_injection.devin.md
runs/: index.json
sample_data/: findings.csv  findings_live.csv
scripts/: demo.py  reset_demo.sh  validate_state.py
tests/: test_cli.py  test_client_resilience.py  test_data_source.py  test_devin_client.py  test_memory.py  test_monitor.py  test_planner.py  test_preflight.py  test_review.py  test_session_manager.py  test_wave_manager.py
(+52 files in other folders)
